fixes alignment of elements

--- a/static/css/cards.css
+++ b/static/css/cards.css
@@ -39,12 +39,9 @@
 }
 .buttonsList{
   position:relative;
-  
   display: flex;
   flex-flow: wrap; 
   overflow: hidden;
-  margin-top:1em;
-
   justify-content: space-between;
 }
 
@@ -87,19 +84,19 @@
    
   position: relative;
   justify-content: center;
-  margin-top:5em;
+  margin-top:2em;
   max-width: 100vw;
   align-items: stretch;
   margin-right: 0;
   margin-left: 0;
 }
 .big-image {
-  /* height: 100%; */
-  /* width: 100vw; */
+  height: 100%; 
+   width: 100vw;
   /* position: absolute; */
   /* background-size: cover; */
   background-position: 50% 50%;
-  background-image: url("/static/images/gab-pili-hcykktXYK0w-unsplash.jpg");
+  background-image: url("/static/images/A.jpg");
   
 }
 
